--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>basic html structure</title>
-    </head>
-    <body>A
-        <h1>ARUN KUMAR JAMALAPURAM</h1>
-    </body>
+
+<head>
+    <title>Name</title>
+</head>
+
+<body>
+    <h1>ARUN KUMAR JAMALAPURAM</h1>
+
+    <h4> Hyderabad </h4>
+    <p> Hyderabad is ruled by famous king Quli-qutubsha. It is <b>Beautiful</b> and <b>Pleasant</b> place to take
+        vacation. More over it is my native place and I like the people and the relations with my family.
+    </p>
+</body>
+
 </html>
