--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
     <p> Hyderabad is ruled by famous king Quli-qutubsha. It is <b>Beautiful</b> and <b>Pleasant</b> place to take
         vacation. More over it is my native place and I like the people and the relations with my family.
     </p>
+
+    <hr>
+    <h3>Route To My Favourite Place</h3>
+    <ol>
+        <li>Maryville</li>
+        <li>Chicago</li>
+        <ol>
+            <li>Chicago Airport</li>
+            <li>Terminal 1</li>
+            <li>Flight</li>
+        </ol>
+        <li>Hyderabad</li>
+    </ol>
+
+    <h3> List of items to carry to the place</h3>
+    <ul>
+        <li>Dslr</li>
+        <li>Laptop</li>
+        <li>Food</li>
+        <ul>
+            <li>Paradise Biryani</li>
+            <li>Chicken Fry</li>
+        </ul>
+    </ul>
+
 </body>
 
 </html>
