--- a/index.html
+++ b/index.html
@@ -37,7 +37,39 @@
         </ul>
     </ul>
 
-    <a href = aboutme.html > Link of AboutMe </a>
+    <a href=aboutme.html> Link of AboutMe </a>
+
+    <hr>
+    <h3> Creating a table food/drinks </h3>
+    The following is to create a table with at least 4 food/drinksthat you would recommend someone try
+    <table>
+        <tr>
+            <th>Food</th>
+            <th> Location</th>
+            <th>Type</th>
+        </tr>
+        <tr>
+            <td> dosa </td>
+            <td> Hyderbad </td>
+            <td> 30-40 </td>
+        </tr>
+        <tr>
+            <td> biryani </td>
+            <td> warangal </td>
+            <td> 70-80 </td>
+        </tr>
+        <tr>
+            <td> pizza </td>
+            <td> Karimnagar </td>
+            <td> 50-60 </td>
+        </tr>
+        <tr>
+            <td> coke </td>
+            <td> kukatpally </td>
+            <td> 20-30 </td>
+        </tr>
+    </table>
+
 
 </body>
 
