--- a/index.html
+++ b/index.html
@@ -70,7 +70,49 @@
         </tr>
     </table>
 
+    <hr>
+    <h3> Code Display </h3>
+    <h4> Rank of Matrix </h4>
+    <blockquote> Rank of a matrix A of size M x N is defined as
+        (a) Maximum number of linearly independent column vectors in the matrix or
+        (b) Maximum number of linearly independent row vectors in the matrix.
 
+    </blockquote>
+
+    <a href=https://www.geeksforgeeks.org/program-for-rank-of-matrix /> source link </a>
+
+    <pre>
+    const double EPS = 1E-9;
+
+    int compute_rank(vector<vector<double>> A) {
+        int n = A.size();
+        int m = A[0].size();
+
+        int rank = 0;
+        vector<bool> row_selected(n, false);
+        for (int i = 0; i < m; ++i) {
+            int j;
+            for (j = 0; j < n; ++j) {
+                if (!row_selected[j] && abs(A[j][i]) > EPS)
+                break;
+            }
+
+            if (j != n) {
+            ++rank;
+            row_selected[j] = true;
+            for (int p = i + 1; p < m; ++p)
+                A[j][p] /= A[j][i];
+            for (int k = 0; k < n; ++k) {
+                if (k != j && abs(A[k][i]) > EPS) {
+                    for (int p = i + 1; p < m; ++p)
+                        A[k][p] -= A[j][p] * A[k][i];
+                }
+            }
+            }
+        }
+        return rank;
+    }
+    </pre>
 </body>
 
 </html>
